[package]
name = "game2048_plonky2"
version = "0.1.0"
edition = "2021"


[dependencies]
plonky2 = "1.0.0"
anyhow = "1.0"
itertools = "0.11.0"
log = "0.4"
plonky2_field = "1.0.0"
plonky2-maybe-rayon = "0.1.0"
rand = "0.8"
rand_chacha = "0.3"
structopt = "0.3"
env_logger = "0.10"
num_cpus = "1.0"

[dev-dependencies]
criterion = "0.5.0"

[[bench]]
name = "game2048_benchmark"
harness = false

